--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,41 @@
 *.exe
 *.out
 *.app
+cmake-build-debug/Testing/Temporary/LastTest.log
+cmake-build-debug/isa
+cmake-build-debug/CMakeFiles/TargetDirectories.txt
+cmake-build-debug/CMakeFiles/rules.ninja
+cmake-build-debug/CMakeFiles/isa.dir/main.cpp.o.modmap
+cmake-build-debug/CMakeFiles/isa.dir/main.cpp.o.ddi.i
+cmake-build-debug/CMakeFiles/isa.dir/main.cpp.o.ddi
+cmake-build-debug/CMakeFiles/isa.dir/main.cpp.ddi
+cmake-build-debug/CMakeFiles/isa.dir/CXXModules.json
+cmake-build-debug/CMakeFiles/isa.dir/CXXDependInfo.json
+cmake-build-debug/CMakeFiles/isa.dir/CXX.dd
+cmake-build-debug/CMakeFiles/CMakeConfigureLog.yaml
+cmake-build-debug/CMakeFiles/cmake.check_cache
+cmake-build-debug/CMakeFiles/clion-environment.txt
+cmake-build-debug/CMakeFiles/clion-Debug-log.txt
+cmake-build-debug/CMakeFiles/3.29.6/CompilerIdCXX/CMakeCXXCompilerId.cpp
+cmake-build-debug/CMakeFiles/3.29.6/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.29.6/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.29.6/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.29.6/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.29.6/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.29.6/CMakeCCompiler.cmake
+cmake-build-debug/CMakeCache.txt
+cmake-build-debug/cmake_install.cmake
+cmake-build-debug/build.ninja
+cmake-build-debug/.ninja_log
+cmake-build-debug/.ninja_deps
+cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-78bf6c8137bca6641f9b.json
+cmake-build-debug/.cmake/api/v1/reply/target-isa-Debug-53b931d6355b438bb79e.json
+cmake-build-debug/.cmake/api/v1/reply/index-2024-10-13T20-20-35-0602.json
+cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
+cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-687c5b7c668ed33e68d6.json
+cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-a862f88266d27bf517cb.json
+cmake-build-debug/.cmake/api/v1/reply/cache-v2-30f45d5bd606565ea700.json
+cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+cmake-build-debug/.cmake/api/v1/query/cache-v2
