--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(isa main.cpp)
 
-target_link_libraries(isa pcap)
+target_link_libraries(isa pcap ncurses)
