Better filtering, sorting and table view

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,26 @@ cmake-build-debug/.cmake/api/v1/query/toolchains-v1
 cmake-build-debug/.cmake/api/v1/query/codemodel-v2
 cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
 cmake-build-debug/.cmake/api/v1/query/cache-v2
+cmake-build-debug/.cmake/api/v1/reply/cache-v2-34ad322e50981bf74423.json
+cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-dbe304e96e280b89a7cb.json
+cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-c3614c72713f9742fd6e.json
+cmake-build-debug/.cmake/api/v1/reply/index-2024-11-09T20-46-10-0837.json
+cmake-build-debug/.cmake/api/v1/reply/target-isa-Debug-12f88171a00064514d43.json
+cmake-build-debug/CMakeFiles/CMakeDirectoryInformation.cmake
+cmake-build-debug/CMakeFiles/isa.dir/build.make
+cmake-build-debug/CMakeFiles/isa.dir/cmake_clean.cmake
+cmake-build-debug/CMakeFiles/isa.dir/compiler_depend.internal
+cmake-build-debug/CMakeFiles/isa.dir/compiler_depend.make
+cmake-build-debug/CMakeFiles/isa.dir/compiler_depend.ts
+cmake-build-debug/CMakeFiles/isa.dir/depend.make
+cmake-build-debug/CMakeFiles/isa.dir/DependInfo.cmake
+cmake-build-debug/CMakeFiles/isa.dir/flags.make
+cmake-build-debug/CMakeFiles/isa.dir/link.txt
+cmake-build-debug/CMakeFiles/isa.dir/progress.make
+cmake-build-debug/CMakeFiles/Makefile.cmake
+cmake-build-debug/CMakeFiles/Makefile2
+cmake-build-debug/CMakeFiles/progress.marks
+cmake-build-debug/Makefile
+isa
+.idea/vcs.xml
+.idea/misc.xml
